# tradr-uav-bridge

./: CMakeLists.txt  Dockerfile  docker-compose.yml  package.xml
files/: .bashrc  entrypoint.sh
launch/: tradr_uav_bridge.launch
proto/: tradr_asset_message.proto  tradr_asset_reg_messages.proto  tradr_asset_status_messages.proto  tradr_bridge_message.proto  tradr_camera_messages.proto  tradr_common_messages.proto  tradr_task_messages.proto
src/: main.cpp
src/network/: networkconnection.cpp  networkconnection.h  networkserver.cpp  networkserver.h
src/tgui/: terminalgui.cpp  terminalgui.h  uaventry.cpp  uaventry.h
src/tradr/: ocuconnection.cpp  ocuconnection.h  ocuserver.cpp  ocuserver.h  tradrdb.cpp  tradrdb.h
src/uav/: maininteractor.cpp  maininteractor.h  ocucommunicationinterface.cpp  ocucommunicationinterface.h  statusinteractor.cpp  statusinteractor.h  streaminteractor.cpp  streaminteractor.h  taskinteractor.cpp  taskinteractor.h  uav.cpp  uav.h  uavcommunicationinterface.cpp  uavcommunicationinterface.h  uavconnection.cpp  uavconnection.h  uavserver.cpp  uavserver.h
src/utils/: event.h
