<?xml version="1.0"?>
<package format="2">
  <name>tradr_uav_bridge</name>
  <version>0.1.0</version>
  <description>the tradr uav bridge</description>

  <maintainer email="alexander.schmitz@iais.fraunhofer.de">Alexander Schmitz</maintainer>

  <author email="alexander.schmitz@iais.fraunhofer.de">Alexander Schmitz</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>bridge_path_interface_msgs</depend>
  <depend>uav_videostream_msgs</depend>
</package>
